--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^7.0.0",
     "lucide-react": "^0.540.0",
     "next": "15.5.0",
     "react": "19.1.0",
